# rust-playing-cards

./: Cargo.toml
src/: card.rs  deck.rs  lib.rs  rank.rs  suit.rs
