[package]
name = "playing_cards"
version = "0.2.1"
authors = ["Micah Pixton"]
edition = "2021"
description = "A library for constructing playing cards, decks, and their associated functionality"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.6.0"